--- a/_astro/src/data/metaoia.yml
+++ b/_astro/src/data/metaoia.yml
@@ -304,18 +304,23 @@ entries:
     Subject: Request for correspondence with COVID-19 advertisers
     DeniedUnder: 6(c)
 
-Sources:
+sources:
   - SourceURL: https://fyi.org.nz/request/4578-foia-sections-s6-a-and-s-6-b-i
     SourceTitle: FOIA Sections S6 (a) and S (6) b (i) - fyi.govt.nz
+    Duration: "2016 - 2017"
 
   - SourceURL: https://fyi.org.nz/request/6763-withheld-rejected-oia-filings
     SourceTitle: Withheld / Rejected OIA Filings - fyi.govt.nz
+    Duration: "2017 - 2018"
 
   - SourceURL: https://fyi.org.nz/request/11587-foia-sections-s6-a-and-s-6-b-i-oct-2018-oct-2019
     SourceTitle: FOIA Sections S6(a) and S(6)b(i) - Oct 2018 - Oct 2019
+    Duration: "2018 - 2019"
 
   - SourceURL: https://fyi.org.nz/request/13527-foia-sections-s6-a-and-s-6-b-i-nov-2019-aug-2020
     SourceTitle: FOIA Sections S6(a) and S(6)b(i) - Nov 2019 - Aug 2020
+    Duration: "2019 - 2020"
 
   - SourceURL: https://fyi.org.nz/request/16579-dpmc-oias-affected-by-section-6-aug-2020-aug-2021
-    SourceTitle: \[DPMC] OIAs affected by Section 6 | Aug 2020 - Aug 2021
+    SourceTitle: "[DPMC] OIAs affected by Section 6 | Aug 2020 - Aug 2021"
+    Duration: "2020 - 2021"
