Converted posts over to MDX
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_astro/src/data/metaoia.yml
+++ b/_astro/src/data/metaoia.yml
@@ -11,7 +11,7 @@ entries:
 
   - ID: 2
     RequestDate: 30/03/2016
-    Subject: Prime Minister’s recent visit to Sri Lanka
+    Subject: Prime Minister's recent visit to Sri Lanka
     DeniedUnder: 6(a)
 
   - ID: 3
@@ -31,7 +31,7 @@ entries:
 
   - ID: 6
     RequestDate: 16/08/2016
-    Subject: Decision to extend New Zealand’s training mission to Iraq
+    Subject: Decision to extend New Zealand's training mission to Iraq
     DeniedUnder: 6(a)
 
   - ID: 7
@@ -271,7 +271,7 @@ entries:
 
   - ID: 54
     RequestDate: 2020 - 2021
-    Subject: Request for briefings relating to Cyber Ransom and strengthening NZ’s resilience to disinformation
+    Subject: Request for briefings relating to Cyber Ransom and strengthening NZ's resilience to disinformation
     DeniedUnder: 6(a), 6(b)(i)
 
   - ID: 55
@@ -291,7 +291,7 @@ entries:
 
   - ID: 58
     RequestDate: 2020 - 2021
-    Subject: Request for briefings and Cabinet papers relating to New Zealand’s involvement in Afghanistan
+    Subject: Request for briefings and Cabinet papers relating to New Zealand's involvement in Afghanistan
     DeniedUnder: 6(a)
 
   - ID: 59
