--- a/_astro/package.json
+++ b/_astro/package.json
@@ -17,10 +17,15 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@astro-community/astro-embed-twitter": "^0.5.3",
     "@rollup/plugin-yaml": "^4.1.2",
     "dayjs": "^1.11.10",
+    "hast-util-from-html-isomorphic": "^2.0.0",
     "littlefoot": "^4.0.1",
     "mdast-util-to-string": "^4.0.0",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "unist-util-visit": "^5.0.0"
   }
 }
