--- a/_astro/package.json
+++ b/_astro/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@astro-community/astro-embed-twitter": "^0.5.3",
+    "@astro-community/astro-embed-youtube": "^0.4.3",
     "@rollup/plugin-yaml": "^4.1.2",
     "dayjs": "^1.11.10",
     "hast-util-from-html-isomorphic": "^2.0.0",
