--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -56,6 +56,15 @@
     #   recommended: false
     #   progress: 57
 
+    - title: Walking Your Blues Away
+      subtitle: How to Heal the Mind and Create Emotional Well-Being
+      author: Thom Hartmann
+      cover: https://covers.openlibrary.org/b/id/1992046-L.jpg
+      link: https://openlibrary.org/works/OL554786W/Walking_Your_Blues_Away
+      date_finished:
+      recommended: false
+      progress: 100
+
     - title: Taxtopia
       subtitle: How I Discovered the Injustices, Scams and Guilty Secrets of the Tax Evasion Game
       author: The Rebel Accountant
