Add missing completion time for WYBA

--- a/src/data/books.yml
+++ b/src/data/books.yml
@@ -61,7 +61,7 @@
       author: Thom Hartmann
       cover: https://covers.openlibrary.org/b/id/1992046-L.jpg
       link: https://openlibrary.org/works/OL554786W/Walking_Your_Blues_Away
-      date_finished:
+      date_finished: 2023-12-15
       recommended: false
       progress: 100
 
