--- a/.github/workflows/external-sync.yml
+++ b/.github/workflows/external-sync.yml
@@ -2,11 +2,8 @@ name: External Sync
 on:
   # schedule:
     # This is mostly a no-op which is why it runs so often
-    # - cron: '*/15 * * * *'
+    - cron: '*/15 * * * *'
   workflow_dispatch:
-env:
-  ANILIST_TOKEN: ${{ secrets.ANILIST_TOKEN }}
-  READWISE_TOKEN: ${{ secrets.READWISE_TOKEN }}
 jobs:
   external-sync:
     runs-on: ubuntu-22.04
@@ -21,12 +18,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12.0"
+          python-version: "3.11.0"
       - name: Upgrade pip
         run: python -m pip install -U pip
       - name: Install dependencies
         run: python -m pip install -r scripts/requirements.txt
-      - name: Sync manga from Anilist
+      - name: Sync data from external sources
         run: ./ci/externalsync.sh
       - name: Check for early exit
         run: |
