--- a/.github/workflows/external-sync.yml
+++ b/.github/workflows/external-sync.yml
@@ -1,6 +1,6 @@
 name: External Sync
 on:
-  # schedule:
+  schedule:
     # This is mostly a no-op which is why it runs so often
     - cron: '*/15 * * * *'
   workflow_dispatch:
